--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="app"></div>
-    <script defer src="/dist/build.js"></script>
+    <script async src="/dist/build.js"></script>
   </body>
 </html>
