--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="description" content="Currently front-end developer at @darwinapps. Also crafting front-end & design for digital products - exclusively for founders and startups.">
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <meta property="og:title" content="Sergey Loysha / Front-end Developer" />
+    <meta property="og:description" content="Currently front-end developer at @darwinapps. Also crafting front-end & design for digital products - exclusively for founders and startups.">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://loysha.com" />
     <meta property="og:image" content="/dist/photo@2x.png" />
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="256">
+    <meta property="og:image:height" content="256">
+    <meta property="og:image:alt" content="Sergey Loysha">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113090071-1"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
